--- a/ExampleJPA/pom.xml
+++ b/ExampleJPA/pom.xml
@@ -28,6 +28,11 @@
             <version>8.0.33</version>
         </dependency>
         <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE210</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.lgooddatepicker</groupId>
             <artifactId>LGoodDatePicker</artifactId>
             <version>11.2.1</version>
